[package]
name = "stirrup"
version = "0.1.0"
edition = "2024"
authors = ["Joseph Skubal"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/skubalj/stirrup"
description = "Terminal based linux filesystem mount manager"
categories = ["command-line-utilities", "filesystem"]
keywords = ["TUI", "linux", "mount"]

[profile.release]
lto = true
strip = true

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
crossterm = "0.29.0"
directories = "6.0.0"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.10"
tui-input = "0.15.0"
